# intents

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  STATUS.md  pyproject.toml  readthedocs.txt
dialogflow_agents/: __init__.py  context.py  intent.py  language.py  prediction_service.py  system_entities.py
dialogflow_agents/agent/: model.py
dialogflow_agents/dialogflow_format/: agent_definition.py  export.py  util.py
dialogflow_agents/dialogflow_helpers/: auth.py
dialogflow_agents/dialogflow_service/: df_format.py  entities.py  export.py  service.py
dialogflow_agents/model/: agent.py  context.py  entity.py  intent.py  response_messages.py
docs/source/: STATUS.md  api.rst  builtin_entities.rst  cli.rst  conf.py  development.rst  example_agent.rst  index.rst  quickstart.rst  testing.rst
example_agent/: __init__.py  agent.py  calculator.py  restaurant.py  rickroll.py  shop.py  smalltalk.py  travels.py
example_agent/intents/: restaurant.py  rickroll.py  smalltalk.py
example_agent/test_stories/: .env.template  calculator_stories.py  conftest.py  shop_stories.py  tox.ini
intents/: __init__.py  fulfillment.py  geolocation.py  helpers_test.py  language.py  language_codes.py  language_test.py  prediction_service.py  service_connector.py  service_connector_test.py  testing.py  types.py
intents/cli/: agent_controller.py  agentctl.py
intents/connectors/: __init__.py
intents/dialogflow_service/: entities.py  export.py  service.py
intents/helpers/: coffee_agent.py  data_classes.py  data_classes_test.py  logging.py  logging_test.py  misc.py  nlp.py  testing.py
intents/language/: __init__.py  agent_language.py  agent_language_test.py  entity_language.py  entity_language_test.py  (+3 more)
(+160 files in other folders)
