[tool.poetry]
name = "dialogflow-agents"
version = "0.1.0"
description = "Dialogflow Agents for Humans"
authors = ["Dario <dario.chi@inventati.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
